# gradesheet

./: .gitignore  README.md  makefile  pyproject.toml
data/processed/: classlist_demo - rubric_demo - marking.xlsx
data/raw/class_lists/: classlist_demo.csv
data/raw/rubrics/: rubric_demo.csv
src/gradesheet/: analyze.py  clean_submissions.py  config.py  create.py
src/vba/: SetupGradesheet.vba
