[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gradesheet"
version = "0.1.0"
description = "Create a spreadsheet for grading assignments and tests."
authors = [
    { name = "Henry Stern"},
]
license = { file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13, <4"
dependencies = [
    "loguru>=0.7.3",
    "pandas[performance]>=2.3.3",
    "polars[excel,pyarrow]>=1.36.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
submissions = [
    "docx2pdf>=0.1.8",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = [
    "W",                   # Whitespace
    "N",                   # Naming
    "A",                   # Overshadowing builtins
    "ISC",                 # Implicit string concatenation
    "PTH",                 # Require pathlib instead of os
    "D"                    # Require docstrings
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["D104"] # Don't require docstring in __init__

[tool.ruff.lint.isort]
known-first-party = ["convertdoc"]
force-sort-within-sections = true

[tool.pyright]
typeCheckingMode = "standard"
include = ["src"]
ignore = ["\\Interactive-*.interactive.py"]
reportMissingParameterType = true

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "nbformat>=5.10.4",
]